k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ldap-auth
  labels:
    name: ldap-auth
    app.kubernetes.io/part-of: ldap-auth
    app.kubernetes.io/managed-by: kustomize
