k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app.kubernetes.io/part-of: ldap-auth
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: redis
  ports:
  - name: redis
    port: 6379
    targetPort: redis
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  labels:
    app.kubernetes.io/part-of: ldap-auth
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: redis
  ports:
  - name: redis
    port: 6379
    targetPort: redis
    protocol: TCP
